manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azdorunner
  labels:
    app: azdorunner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azdorunner
  template:
    metadata:
      labels:
        app: azdorunner
    spec:
      containers:
      - name: azdorunner
        image: idevopsio/idevops-azdo-runner:v1
        volumeMounts:
          - mountPath: /var/run/docker.sock
            name: docker-volume
        ports:
        - containerPort: 80
      volumes:
        - hostPath:
            path: /var/run/docker.sock
            type: ""
          name: docker-volume
